--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1560,107 +1560,107 @@ stories:
   domain: http://www.americanpress.com/
   link: https://www.americanpress.com/sports/national/canucks-take-on-the-blackhawks-seek-th-straight-win/article_a532767c-31b6-5d61-b2e3-d347d04a7015.html
 images:
-- name: los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
-- name: locked-up-steam-lock-up-steam-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-copper-circuit-2.jpg
-- name: bordercrossing-bordercrossing-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alien-goggles.jpg
-- name: flower-barbed-wire-flower-barbed-wire-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-diego-rivera1.jpg
-- name: aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-- name: store-on-corner-store-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-far-away.jpg
-- name: fence-fence-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sand-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-crunch-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crunch-paper.JPG
-- name: beach-clouds-lifeguard-beachclouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gred-mash.jpg
-- name: stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-- name: crypto-machine-bletchley-crypto-machine-bletchley-crabapple.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crabapple.png
-- name: lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-- name: windowmountain-window-mountain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smooth-ride.jpg
-- name: mistywoods-babyfoot-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
-- name: legal-statue-legalstatue-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sunday.jpg
-- name: yosemite-yosemite-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-soul.jpg
-- name: blossombar-aqua-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-00-00.jpg
-- name: stories-slashdb-sql-pass-through-mode.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-slashdb-sql-pass-through-mode.png
-- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
-- name: old-gas-pumps-oldgaspumps-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-brush.jpg
-- name: christianity-christianity-under-construction-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-deep-connections.jpg
-- name: oldhotel-oldhotel-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-two.jpg
-- name: copper-circuit-japanese-garden-tree.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-japanese-garden-tree.jpg
-- name: adam-smith-adam-smith-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-matrix.jpg
-- name: capital-battle-capitolbattle-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-gan-vogh.jpg
-- name: white-house-lawn-white-house-lawn-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-umberto-bocc.jpg
-- name: braceros-domingo-ulloa-new-york-city-skyline_36655833162_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-new-york-city-skyline_36655833162_o.jpg
-- name: capital-battle-capitolbattle-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-diego-rivera1.jpg
-- name: mistywoods-babyfoot-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-creativity.jpg
-- name: razorwire-DSC-0080-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-constitution.jpg
-- name: server-cloud-server-racks-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
-- name: copper-circuit-close-to-all-remote-aircraft.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-close-to-all-remote-aircraft.jpg
-- name: legal-statue-legalstatue-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-granite.jpg
-- name: hollywood-building-hollywood-building-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-storm.jpg
-- name: oldroad-old-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
-- name: oldtrain-oldtrain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-missle.jpg
-- name: bf-skinner-hotel-down-sidewalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hotel-down-sidewalk.jpg
-- name: copper-circuit-statue-staring-down-to-right.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-staring-down-to-right.jpg
-- name: dragon-desert-desert-dragon-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-matrix.jpg
-- name: oldhousecars-house-old-cars-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-umberto-bocc.jpg
-- name: locked-up-steam-lock-up-steam-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
-- name: subway-subway-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-nazi-poster.jpg
-- name: old-cabin-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-rainbow-festival.jpg
-- name: oldhouse-granaryfield-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-dream.jpg
-- name: bf-skinner-looking-down-over-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-looking-down-over-city.jpg
-- name: oldtrain-oldtrain-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-diego-rivera1.jpg
-- name: abandonedbuildings_atari_asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_asteroids.jpg
-- name: castle-wall-DSC-0067-marcel-duchamp.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-marcel-duchamp.JPG
-- name: old-cabin-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
-- name: hollywood-building-hollywood-building-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-really-hot.jpg
-- name: white-house-lawn-white-house-lawn-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-pablo-blue.jpg
+- name: downtheline-downtheline-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-space-pizza.jpg
+- name: crow-crow-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-dream.jpg
+- name: subway-subway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway.jpg
+- name: udnie-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1184.jpg
+- name: old-house-oldhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-mucha-mult.jpg
+- name: copper-circuit-subway-underground_35904617894_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-underground_35904617894_o.jpg
+- name: san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
+- name: oldcabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-missle.jpg
+- name: braceros-domingo-ulloa-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-desert-road-mountains.jpg
+- name: blossombar-crafty-painting-file-00-00-50-48.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-48.jpg
+- name: stalin-time-working-waterfront-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-waterfront-2.jpg
+- name: rain-princess-IMG_8336.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8336.jpg
+- name: downtheline-downtheline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline.jpg
+- name: server-cloud-server-racks-door-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crabapple.jpg
+- name: miamibeach-miamibeach-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-satan-red.jpg
+- name: braceros-domingo-ulloa-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-la_36349151230_o.jpg
+- name: copper-circuit-eiphel-tower-paris-brown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-eiphel-tower-paris-brown.jpg
+- name: white-house-whitehouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-three.jpg
+- name: old-gas-pumps-oldgaspumps-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-deep-connections.jpg
+- name: flower-barbed-wire-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-nazi-poster.jpg
+- name: old-gas-pumps-oldgaspumps-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purp-paper.jpg
+- name: server-cloud-server-racks-clouds-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-rainbow-festival.jpg
+- name: dragon-desert-desert-dragon-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-wols.jpg
+- name: blossombar-yellow-collage-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-24-99.jpg
+- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: oldroad-old-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-electricity.jpg
+- name: old-cabin-oldcabin-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-blocks.jpg
+- name: capital-battle-capitolbattle-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-pablo-blue.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-mucha-mult.jpg
+- name: aws-s3-stories-beachclouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beachclouds-clean-view.jpg
+- name: razorcliff-razorcliff-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-internet-numbers.jpg
+- name: window-window.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window.jpg
+- name: nazi-invasion-public-market-farmers-market.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-public-market-farmers-market.jpg
+- name: gears-4882162452-fa3126b38d-b-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-atari-asteroids.jpg
+- name: meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+- name: copper-circuit-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-brooklyn-station.jpg
+- name: udnie-IMG_3469.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_3469.jpg
+- name: beach-rocks-beach-rocks-currents-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dry-skin.jpg
+- name: old-school-house-old-schoolhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-deep-connections.jpg
+- name: stalin-time-train-car_35892468014_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-car_35892468014_o.jpg
+- name: fence-bw-fist.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist.png
+- name: windowmountain-window-mountain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-alien-goggles.jpg
+- name: amusement-park-amusement-park-2-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
+- name: bf-skinner-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-fat-old-pigeon-on-fence.jpg
+- name: cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+- name: abandonedbuildings_space_pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_space_pizza.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-dresden.png
+- name: eduardo-eduardo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smoking-cigarette.jpg
+- name: downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-feed-people.JPG
+- name: old-barn-old-barn-1500-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
+- name: stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-diego-rivera1.jpg
 ---
 Beach Fossils Return To Miami For The First Time In More Than Six Years.&nbsp;Pope Francis Equates Violence Against Women To Profaning God.&nbsp;Parks Restrict Climbing Routes To Protect Wildlife.&nbsp;Elon Musk Tweets New SpaceX Flight Simulation Video.&nbsp;Australia Sending Aid To Wildfire Towns As Death Toll Rises.&nbsp;Coping With The Challenges Of Mental Illness During The Holidays.&nbsp;Bonsai Trees Shaped Like Rats Are Popular In Vietnam Ahead Of Lunar New Year.&nbsp;Lady Leopards Fall In Conference Hoops Hosting Mena.&nbsp;
